--- a/docs/style.css
+++ b/docs/style.css
@@ -173,7 +173,7 @@ form textarea {
 
 /* Footer */
 footer {
-    background-color: #777;
+    background-color: #3b3b3b;
     color: #fff;
     text-align: center;
     padding: 10px 0;
