--- a/docs/style.css
+++ b/docs/style.css
@@ -101,7 +101,7 @@ h1 {
 
 h2 {
     font-family: 'Hweebaqs', sans-serif; /* Title font */
-    color: #fff;
+    color: #777;
     font-size: 24px;
     margin-bottom: 10px;
 }
