--- a/docs/style.css
+++ b/docs/style.css
@@ -94,7 +94,7 @@ main {
 
 h1 {
     font-family: 'Hweebaqs', sans-serif; /* Title font */
-    color: #d25354;
+    color: #e33533;
     font-size: 36px;
     margin-bottom: 20px;
 }
@@ -181,7 +181,7 @@ footer {
 }
 
 footer span {
-    color: #d25354;
+    color: #e33533;
 }
 
 /* ===================================== */
