--- a/docs/style.css
+++ b/docs/style.css
@@ -709,8 +709,8 @@ footer span {
     position: absolute;
     top: 8px;
     right: 8px;
-    background: red;
-    color: white;
+    background: #e33533;
+    color: #fff;
     padding: 2px 6px;
     border-radius: 4px;
     font-size: 12px;
